kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: weekend-api-service
spec:
  selector:
    app: weekend-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
